# Stellar-Forge

./: .clang-tidy  .editorconfig  .env.example  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  build-linux.sh  build-windows.ps1  conanfile.py  conanfile.txt  generate.ps1  generate.sh  release.sh  test-release.sh  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_request.md  feature_request.md
sampleGames/flappyBird/: CMakeLists.txt  main.cpp
sampleGames/flappyBird/assets/objects/json/: Background.json  Bird.json  Pipe.json  PipeSpawner.json  Score.json
sampleGames/flappyBird/assets/objects/scripts/: Background.cpp  Background.hpp  Bird.cpp  Bird.hpp  Pipes.cpp  Pipes.hpp  Score.cpp  Score.hpp
sampleGames/flappyBird/assets/scenes/json/: Scene.json
src/common/: AComponent.cpp  AComponent.hpp  AField.cpp  AField.hpp  AFieldGroup.cpp  AFieldGroup.hpp  AMeta.cpp  AMeta.hpp  CMakeLists.txt  CPPMonoBehaviour.cpp  CPPMonoBehaviour.hpp  IComponent.hpp  IError.hpp  IObject.hpp  IScene.hpp  UUID.cpp  UUID.hpp  UUIDException.cpp  UUIDException.hpp  UncertainBool.hpp  UtilExemple.cpp  UtilExemple.hpp  Utils.hpp  Uuid.cpp  Uuid.hpp  VirtualObject.cpp  VirtualObject.hpp  VirtualScene.cpp  VirtualScene.hpp  conanfile.py
src/common/components/: AComponent.cpp  AComponent.hpp  CMakeLists.txt  CPPMonoBehaviour.cpp  CPPMonoBehaviour.hpp  DynamicComponentLoader.cpp  DynamicComponentLoader.hpp  RigidBody.cpp  RigidBody.hpp  Transform.cpp  Transform.hpp
src/common/event/: CMakeLists.txt  Event.hpp  EventData.hpp  EventManager.hpp  EventSystem.cpp  EventSystem.hpp
src/common/factories/: CMakeLists.txt  ComponentFactory.cpp  ComponentFactory.hpp
src/common/fields/: AField.cpp  AField.hpp  BooleanField.cpp  BooleanField.hpp  CMakeLists.txt  ColorField.cpp  ColorField.hpp  ComponentField.cpp  ComponentField.hpp  FieldGroup.cpp  FieldGroup.hpp  FileField.cpp  FileField.hpp  FloatField.cpp  FloatField.hpp  IntField.cpp  IntField.hpp  IntRectFieldGroup.cpp  IntRectFieldGroup.hpp  StringField.cpp  StringField.hpp  Vector2Field.cpp  Vector2Field.hpp  Vector3Field.cpp  Vector3Field.hpp
src/common/fields/groups/: AFieldGroup.cpp  AFieldGroup.hpp  CMakeLists.txt  InvisibleFieldGroup.cpp  InvisibleFieldGroup.hpp
src/common/json/: CMakeLists.txt  IJsonObject.hpp  IJsonParser.hpp  IJsonPrimitiveObject.hpp  IJsonReader.hpp  IJsonWriter.hpp  JsonArray.cpp  JsonArray.hpp  JsonBoolean.cpp  JsonBoolean.hpp  JsonNull.cpp  JsonNull.hpp  JsonNumber.cpp  JsonNumber.hpp  JsonObject.cpp  JsonObject.hpp  JsonParser.cpp  JsonParser.hpp  JsonPrettyWriter.cpp  JsonPrettyWriter.hpp  JsonReader.cpp  JsonReader.hpp  JsonString.cpp  JsonString.hpp  JsonWriter.cpp  JsonWriter.hpp
src/common/managers/: CMakeLists.txt  ManagerException.cpp  ManagerException.hpp  ObjectManager.cpp  ObjectManager.hpp  SceneManager.cpp  SceneManager.hpp
src/common/utils/: CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerScopes.cpp  LoggerScopes.hpp  StringUtils.cpp  StringUtils.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  LuaScriptComponent.cpp  LuaScriptComponent.hpp  ObjectManager.cpp  ObjectManager.hpp  SceneManager.cpp  SceneManager.hpp  conanfile.py
src/engine3D/: CMakeLists.txt  Engine3D.cpp  Engine3D.hpp  conanfile.py
src/graphics/: CMakeLists.txt  Graphics.cpp  Graphics.hpp  GraphicsException.cpp  GraphicsException.hpp  IGraphicsComponent.hpp  conanfile.py
src/graphics/components/: AGraphicsComponent.cpp  AGraphicsComponent.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  AudioSource.cpp  AudioSource.hpp  Button.cpp  Button.hpp  CMakeLists.txt  IGraphicsComponent.hpp  Sprite.cpp  Sprite.hpp  SpriteComponent.cpp  SpriteComponent.hpp  SpriteSheet.cpp  SpriteSheet.hpp  UIButton.cpp  UIButton.hpp  UIText.cpp  UIText.hpp  UITextInputButton.cpp  UITextInputButton.hpp
src/graphics3D/: CMakeLists.txt  Graphics3D.cpp  Graphics3D.hpp  GraphicsException3D.cpp  GraphicsException3D.hpp  conanfile.py
src/graphics3D/components/: CMakeLists.txt  Cube.cpp  Cube.hpp  I3DGraphicsComponent.hpp
src/managers/: ObjectManager.cpp  ObjectManager.hpp  SceneManager.cpp  SceneManager.hpp
src/physics/: Box.cpp  Box.hpp  CMakeLists.txt  Collider.cpp  Collider.hpp  Math.cpp  Math.hpp  Physics.cpp  Physics.hpp  Sphere.cpp  Sphere.hpp  conanfile.py
src/physics/components/: CMakeLists.txt  RigidBody.cpp  RigidBody.hpp
tests/: CMakeLists.txt  main.cpp
tests/assets/components/: CMakeLists.txt  test_dynamic.cpp
tests/assets/objects/: test-ally.json
tests/bad_assets/objects/: test-ally.json
tests/bad_assets/scenes/: test-scene.json
tests/common/: CMakeLists.txt  Logger.spec.cpp  UUID.spec.cpp
tests/components/: CMakeLists.txt  ComponentDeserialization.spec.cpp  ComponentSerialization.spec.cpp
tests/engine/: CMakeLists.txt  Engine.spec.cpp
tests/json/: CMakeLists.txt  JsonParser.spec.cpp  JsonPrettyWriter.spec.cpp  JsonReader.spec.cpp  JsonWriter.spec.cpp
