cmake_minimum_required(VERSION 3.15)

project(Stellar-Forge
        LANGUAGES CXX)

option(CLANG_SEVERE "Set clang-tidy warnings as errors" OFF)

find_program(CLANG_TIDY_EXE NAMES "clang-tidy")
if (CLANG_TIDY_EXE)
    message(STATUS "clang-tidy found: ${CLANG_TIDY_EXE}")
    if (CLANG_SEVERE)
        message(STATUS "Setting clang-tidy warnings as errors")
        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE};-warnings-as-errors=*")
    else ()
        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
    endif ()
else ()
    find_program(CLANG_TIDY_EXE NAMES "clang-tidy-18")
    if (CLANG_TIDY_EXE)
        message(STATUS "clang-tidy found: ${CLANG_TIDY_EXE}")
        if (CLANG_SEVERE)
            message(STATUS "Setting clang-tidy warnings as errors")
            set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE};-warnings-as-errors=*")
        else ()
            set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
        endif ()
    else ()
        message(STATUS "clang-tidy not found")
    endif ()
endif ()

add_subdirectory(src/common)
add_subdirectory(src/physics)
add_subdirectory(src/graphics)
add_subdirectory(src/engine)
