add_subdirectory(groups)

target_sources(StellarForgeCommon
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/AField.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/FileField.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Vector3Field.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Vector2Field.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/StringField.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/FloatField.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/BooleanField.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/IntField.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ComponentField.hpp
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/AField.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/FileField.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Vector3Field.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Vector2Field.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/StringField.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/FloatField.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/BooleanField.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/IntField.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ComponentField.cpp
)
